# FluxFeed

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  askama.toml  check_color.py  check_html.py  debug_menu.py  docker-compose.yml  investigate_logs.py  package-lock.json  package.json  tailwind.config.js  test_mobile_menu.py  tsconfig.json
.claude/: settings.local.json
.github/workflows/: docker-publish.yml  release.yml
.sqlx/: query-113db00d0fe948627ee3e08d754494ef78688bb73ab988fed0a9e89a99af74b0.json  query-1ccf0e4f2421da24dfdc511aaaa195c55b2cda560ec94aba024ef58485efa017.json  query-294e1e9380668bb15d8e1e4a48aee449147dec9c9bd8d3c069e91aee2db7932b.json  query-2eb4adeacb96728518c7343b78674600c55dd3c1a65322a2f8c3968ee1879b7f.json  query-393a7ad6795d772e518da8e5c4430e78173ee40664b939c7fb11222a1ac9283f.json  query-deb8d98bcf14148ffcac7233aa298f94d7eb9deb439abb11c6890ca1e2d6f59f.json
issues/closed/: adaptive-fetching.md  background-feed-import.md  code-duplication-fallback-feed.md  colors.md  csrf-error.md  docker-tz.md  docker.md  dynamic-sql-query-building.md  edit-feed.md  error-pages.md  expand-compact-article.md  extract-minor-template-patterns.md  friendly-dates.md  full-screen.md  load-more-bug.md  mark-all-read.md  mark-read.md  n-plus-one-query-problem.md  open-graph.md  randomize-tag.md  redo-feed-filter.md  search.md  ssrf-protection.md  star-article.md  tag-link.md  unsanitized-opengraph-xss.md  user-agent.md  version-bump.md
issues/new/: add-github-link.md  android.md  error-page.md  (+33 more)
migrations/: 20260102000001_initial_schema.sql  20260102000002_add_fts.sql  20260103000003_add_feed_properties.sql  20260103000004_add_opengraph.sql  20260104000005_add_logs.sql  20260104000007_add_starred.sql  20260105000006_add_ttl_and_update_fetch_frequency.sql  20260106000001_add_groups.sql  20260107000001_fix_adaptive_fetch_defaults.sql  20260108000001_add_consecutive_new_articles.sql  20260109000001_add_tag_styling.sql  20260110000001_add_article_listing_index.sql  20260111000001_add_ignore_pattern.sql
scripts/: build-ts.js  build.sh  bump-version.sh  stress-test.py  take_fullscreen_screenshots.py  take_list_screenshots.py  take_screenshots.py
src/: config.rs  lib.rs  main.rs
static/: manifest.webmanifest  service-worker.js
tests/: api_integration_tests.rs
(+121 files in other folders)
