[package]
name = "fluxfeed"
version = "0.1.8"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

# RSS/Atom parsing
feed-rs = "2.0"
quick-xml = "0.37"

# HTML sanitization
ammonia = "4.0"

# Reader mode content extraction
dom_smoothie = "0.3"

# OpenGraph metadata extraction
webpage = "2.0"

# HTTP client
reqwest = { version = "0.12", features = ["gzip", "brotli", "native-tls-vendored"] }

# Scheduling
tokio-cron-scheduler = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CSRF protection
rand = "0.8"
base64 = "0.22"
http = "1.2"

# URL parsing
url = "2.5"

[dev-dependencies]
axum-test = "16"
